--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -162,9 +162,12 @@ body.light-theme{
   opacity: 1;
 }
 
-.light-theme .home__greeting,
+.light-theme .home__greeting{
+  color: hsl(var(--first-hue), 40%, 75%);
+}
+
 .light-theme .home__name{
-  color: hsl(var(--first-hue), 60%, 65%);
+  color: hsl(var(--first-hue), 90%, 70%);
 }
 
 /*=============== REUSABLE CSS CLASSES ===============*/
@@ -281,31 +284,38 @@ body.light-theme{
   margin-top: 2rem;
 }
 
-.home__greeting,
-.home__education{
+.home__greeting{
   font-size: var(--small-font-size);
   font-weight: var(--font-medium);
-}
-
-.home__greeting{
-  color: var(--title-color);
+  color: hsl(var(--first-hue), 40%, 37%) ;
 }
 
 
 .home__name{
   font-size: var(--biggest-font-size);
+  color: hsl(var(--first-hue), 40%, 50%);
 }
 
-/* .home__name:after{
-  content:"";
-  animation: spin 2s linear infinite;
+.home__name::before{
+  content: "Anzindh";
+  animation: animate infinite 3s;
 }
 
-@keyframes home__name{
-  0%{content:"Anzindh";}
-  50%{content:"Full Stack Developer";}
-  75%{ content: "Anzindh";}
-} */
+@keyframes animate {
+  
+  0% {
+      content: "Anzindh";
+  }
+
+  50% {
+      content: "Full Stack Web Developer";
+  }
+
+  75% {
+      content: "Anzindh";
+  }
+}
+
 
 /* Animation */
 .home__handle{
