--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -145,9 +145,10 @@ body.light-theme{
   color: var(--text-color);
 }
 
+.light-theme .work__card,
 .light-theme .skills__content,
 .light-theme .contact__card{
-  box-shadow: 0 2px 16px hsla(var(--second-hue), 48%, 8%, .1);
+  box-shadow: 0 2px 16px hsla(var(--second-hue), 58%, 8%, .2);
 }
 
 .light-theme .star,
@@ -214,7 +215,7 @@ body.light-theme{
   left:0;
   width:100%;
   background-color: var(--body-color);
-  z-index: var(--z--fixed);
+  z-index: 1;
 }
 
 .nav{
@@ -234,15 +235,20 @@ body.light-theme{
   color: var(--first-color-alt);
 }
 
+.nav__menu-container{
+  display: flex;
+ justify-content: center;
+}
+
 .nav__menu{
   position:fixed;
-  bottom:.1rem;
+  bottom:1rem;
   background-color: hsla(var(--second-hue), 32%, 16%, .8);
-  width:90%;
+  width:80%;
   border-radius: 4rem;
   padding: 1rem 2.25rem;
-  backdrop-filter: blur(10px);
-  margin-left: 4%;
+  backdrop-filter: blur(3px);
+  z-index: 1;
 }
 
 
@@ -964,74 +970,57 @@ body.light-theme{
 
 
 /*=============== WORK ===============*/
+
+
+/*=============== WORK===============*/
 .work__container{
-  padding-top: 1rem;
-}
-
-.work__filters{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  column-gap: .75rem;
-  margin-bottom: 2rem;
-}
-
-.work__item{
-  cursor: pointer;
-  color: var(--title-color);
-  padding: .25rem .75rem;
-  font-weight: var(--font-medium);
-  border-radius: .5rem;
+  position: relative;
+  z-index: 0;
 }
 
 .work__card{
   background-color: var(--container-color);
-  padding: 1rem;
-  border-radius: 1rem;
+  padding: 1.25rem;
+  /* border-radius: 1rem; */
+  margin-bottom: 3rem;
+  position: relative;
+  text-align: center;
+
 }
 
-.work_img{
-  border-radius: 1rem;
-  margin-bottom: .75rem;
+.work__img{
+  width:40%;
+  margin-bottom: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
-.work__title{
+.work__name{
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
   margin-bottom: .25rem;
 }
 
-.work__button{
-  width:max-content;
-  color: var(--first-color);
-  font-size: var(--small-font-size);
-  display: flex;
-  align-items: center;
-  column-gap: .25rem;
-}
-
-.work__button:hover .work_icon{
-  transform: translateX(.25rem);
-}
-
-.work__icon{
-  font-size: 1rem;
-  transition:.4s;
-}
-
-/* Active item work*/
-
-.active-work{
-  background-color: var(--first-color);
-  color: var(--body-color);
-}
-
-/*=============== TESTIMONIAL ===============*/
-
 
 /* Swiper class */
 
+.swiper-pagination-bullet{
+  background-color: var(--text-color-light);
+}
 
+.swiper-pagination-bullet-active{
+  background-color: var(--first-color);
+}
+
+.swiper-button-prev,
+.swiper-button-next{
+  color: var(--first-color);
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%)
+}
 /*=============== CONTACT ===============*/
 
 
@@ -1101,6 +1090,7 @@ body.light-theme{
 /*=============== FOOTER ===============*/
 .footer{
   background-color:var(--first-color);
+
 }
 
 .footer__container{
@@ -1109,6 +1099,7 @@ body.light-theme{
 
 .footer__title,.footer__link{
   color: var(--body-color);
+
 }
 
 .footer__title{
