--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -862,16 +862,11 @@ body.light-theme{
 
 .about__container{
   row-gap: 2.5rem;
+  margin-top: 4.5rem;
 }
 
-.about__img{
-  width: 220px;
-  border-radius: 1.5rem;
-  justify-self: center;
-}
-
-.about__data{
-  text-align: center;
+.about__card{
+  box-sizing: border-box;
 }
 
 .about__info{
@@ -881,20 +876,190 @@ body.light-theme{
   margin-bottom: 2rem;
 }
 
+.img{
+  max-width: 100%;
+  height:auto;
+}
+
+.about__card{
+  margin-inline: 1.5rem;
+  display: grid;
+  place-items: center;
+}
+
+.card{
+  position: relative;
+  width: 290px;
+  background: linear-gradient(hsl(var(--first-hue), 30%, 50%),black);
+  border-radius: 1rem 1rem 11rem 11rem;
+  padding: 2.5rem 1.5rem 3.5rem;
+  text-align: center;
+  box-shadow: 0 8px 32px black;
+}
+
+.card__img{
+  width: 90px;
+  margin-left: -.5rem;
+}
+
+.card__border{
+  width: 124px;
+  height: 124px;
+  background-color: hsl(var(--first-hue), 30%, 65%);
+  border-radius: 50%;
+  margin: 0 auto 1rem;
+  place-items: center;
+  display: grid;
+  margin-top: 3rem;
+}
+
+.card__round{
+  width: 104px;
+  height: 104px;
+  background-color: hsl(var(--first-hue), 30%, 30%);
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  justify-content:center ;
+  align-items: flex-end;
+}
+
+.card__name,
+.card__profession{
+  color: var(--text-color-light);
+}
+
+.card__name{
+  font-size: var(--h2-font-size);
+  font-weight: 600;
+  
+}
+
+.card__profession{
+  font-weight:600;
+  font-size: var(--tiny-font-size);
+}
+
+/* Card Info */
+
+.info{
+  position: absolute;
+  top: -1px;
+  left: 0;
+  width:100%;
+  background-color: hsl(var(--first-hue), 30%, 65%);
+  padding: 2.5rem 1.5rem 3.3rem;
+  border-radius: 1rem 1rem 11rem 11rem;
+  clip-path: circle(16px at 250px 40px);
+  transition: clip-path .4s ease-in-out;
+}
+
+.info__icon{
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  font-size: 1.5rem;
+  color: var(--title-color);
+  display: inline-flex;
+  padding: .25rem;
+  cursor: pointer;
+  transition: opacity .3s;
+}
+
+.info__img{
+  width: 45px;
+}
+
+.info__border{
+  width: 64px;
+  height: 64px;
+  background-color: hsl(var(--first-hue), 50%, 60%);
+  border-radius: 50%;
+  margin: 0 auto 1rem;
+  display: grid;
+  place-items: center;
+  transform: translateX(-3rem);
+  transition: transform .8s;
+}
+
+.info__chara{
+  width: 52px;
+  height: 52px;
+  background-color: hsl(var(--first-hue), 30%, 30%);
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.info__data{
+  margin-top: 3rem;
+  display: grid;
+  row-gap: .25rem;
+  margin-bottom: 1.5rem;
+  transform: translateX(-3rem);
+  transition: transform 1s;
+}
+
+.info__name{
+  font-size: var(--normal-font-size);
+  color: var(--title-color);
+}
+
+.info__profession,
+.info__location{
+  font-size: var(--smaller-font-size);
+}
+
+
+.info__social-link{
+  font-size: var(--biggest-font-size);
+}
+
+
+.info__social-icons{
+  display: flex;
+  justify-content: center;
+  column-gap: 1rem;
+  transform: translateX(-5rem);
+  transition: transform .8s;
+}
+
+.info:hover{
+  clip-path: circle(75%);
+}
+.info:hover .info__icon{
+  opacity: 0;
+}
+
+.info:hover .info__border,
+.info:hover .info__data,
+.info:hover .info__social-icons{
+  transform: translateX(0);
+}
+
+.about__data{
+  text-align: center;
+}
+
+
+
 .about__box{
   background-color: var(--container-color);
   border-radius: .75rem;
   padding: .75rem .5rem;
 }
 
-.about__icon{
-  font-size: 1.5rem;
+.about__box-icon{
+  font-size: 2.5rem;
   color: var(--first-color);
-  margin-bottom: .5rem;
+  margin-bottom: 3rem;
 }
 
 .about__title{
-  font-size:var(--small-font-size)
+  font-size:var(--small-font-size);
+  margin-bottom:1rem;
 }
 
 .about__subtitle{
