--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -890,7 +890,7 @@ body.light-theme{
 
 .card{
   position: relative;
-  width: 350px;
+  width: 290px;
   background: linear-gradient(hsl(var(--first-hue), 30%, 60%),var(--body-color));
   border-radius: 1rem 1rem 11rem 11rem;
   padding: 2.5rem 1.5rem 3.5rem;
@@ -951,7 +951,7 @@ body.light-theme{
   background-color: hsl(var(--first-hue), 30%, 65%);
   padding: 2.5rem 1.5rem 3.3rem;
   border-radius: 1rem 1rem 11rem 11rem;
-  clip-path: circle(16px at 310px 40px);
+  clip-path: circle(16px at 250px 40px);
   transition: clip-path .4s ease-in-out;
 }
 
@@ -1289,6 +1289,14 @@ body.light-theme{
   column-gap: 1.25rem;
 }
 
+.footer__social-link{
+  /* background-color: var(--body-color); */
+  padding: .25rem;
+  border-radius: .25rem;
+  font-size: 2rem;
+  display: inline-flex;
+}
+
 
 /*=============== SCROLL BAR ===============*/
 ::-webkit-scrollbar{
@@ -1309,7 +1317,23 @@ body.light-theme{
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 
+@media screen and  (max-width:420px) {
+  .nav__menu{
+    padding: 1rem 1.5rem;
+  }
+  .home__data{
+    padding-top: 5rem;
+  }
+  .about__info{
+    display: flex;
+    flex-direction: column;
+    width: 97%;
+  }
+  .about__box{
+    margin-top: 5rem;
+  }
 
+}
 /* For medium devices */
 
 
